добавлены все необходимые функции, полностью рабочая версия